form.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    app: form
  name: form
spec:
  containers:
  - image: <dockerhubuserid>/form
    name: form
    ports:
    - containerPort: 5003
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
