postgres.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    db: postgres
  name: postgres
spec:
  containers:
  - image: postgres
    name: postgres
    ports:
    - containerPort: 5432
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
