users.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    app: users
  name: users
spec:
  containers:
  - image: <dockerhubuserid>/users
    name: users
    ports:
    - containerPort: 5003
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
